--- a/assets/scss/_utilities/_variables.scss
+++ b/assets/scss/_utilities/_variables.scss
@@ -9,6 +9,9 @@ $white: #fff;
 $navItemsColor: #8d7124;
 $iconFooterColor: #e7cf9c;
 $negroTransparente: rgba(0, 0, 0, 0.5);
+$outLineVentas: rgb(172, 169, 169);
+$divButtonColor: #3b3636;
+$buttonColor: #f7cdac;
 /* COLORES */
 
 /* FUENTES */
