--- a/assets/scss/_components/_mediaQuerys.scss
+++ b/assets/scss/_components/_mediaQuerys.scss
@@ -309,7 +309,7 @@
                 .card-producto-header{
                     padding: 1rem 0 1rem 0;
                     .card-header-img{
-                        width: 70%;
+                        width: 20%;
                     }
                 }
                 .card-producto-body{
@@ -319,6 +319,47 @@
                     }
                     .card-body-span-precio{
                         font-size: 1.4rem;
+                    }
+                }
+            }
+        }
+    }
+    .main-container-carrito{
+        .container-carrito{
+                display: grid;
+                width: 1000px;
+                grid-template-columns: 2fr 1fr;
+                grid-template-rows: auto;
+            .container-carrito-productos{
+                .carrito-contador{
+                    span{
+                        font-size: 1.8rem;
+                    }
+                }
+            }
+            .container-carrito-pagar{
+                display: flex;
+                flex-direction: column;
+                gap: 1rem;
+                padding: 1rem;
+                span{
+                    font-weight: bold;
+                    font-size: 1.2rem;
+                    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+                }
+                .carrito-pagar-total{
+                    display: flex;
+                    flex-direction: column;
+                    gap: 0.5rem;
+                }
+                .carrito-pagar-button{
+                    button{
+                        padding: 1rem;
+                        width: 100%;
+                        border-radius: 50px;
+                        background-color: orange;
+                        color: white;
+                        font-weight: bolder;
                     }
                 }
             }
