--- a/assets/scss/_partials/_carrito.scss
+++ b/assets/scss/_partials/_carrito.scss
@@ -2,12 +2,10 @@
 @use '../_utilities/mixins.scss' as *;
 
 .main-container-carrito{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    @include dFlexColumnItemsCenter;
     padding: 1rem;
     .container-carrito{
-            border: 1px solid black;
+            border: 1px solid gray;
         .container-carrito-productos{
             .carrito-contador{
                 padding: 1rem;
@@ -17,32 +15,38 @@
                 }
             }
             .carrito-productos{
-                .producto{
-                    display: flex;
-                    gap: 1rem;
+                padding: 1rem;
+                .carrito-vacio{
                     padding: 1rem;
-                    border: 1px solid black;
-                    .carrito-productos-img{
-                        img{
-                            width: 8rem;
-                        }
+                    p{
+                        text-align: center;
+                        font-size: 1.5rem;
+                        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
                     }
+                }
+                .producto{
+                    @include dFlexRowItemsCenter;
+                    padding: 0.5rem;
                     .carrito-productos-descripcion{
-                        display: flex;
-                        flex-direction: column;
+                        @include dFlexColumnItemsStart;
                         justify-content: center;
+                        width: 100%;
                         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
                         .carrito-envio{
                             color: green;
                         }
+                    }
+                    .carrito-productos-img{
+                        @include dFlexRowJustifyCenter;
+                        width: 100%;
                     }
                 }
 
             }
         }
         .container-carrito-pagar{
-            display: flex;
-            flex-direction: column;
+            @include dFlexColumnItemsStart;
+            border: 1px solid gray;
             gap: 1rem;
             padding: 1rem;
             span{
@@ -51,17 +55,21 @@
                 font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
             }
             .carrito-pagar-total{
-                display: flex;
-                flex-direction: column;
+                @include dFlexColumnItemsStart;
                 gap: 0.5rem;
+                width: 100%;
+                span{
+                    text-align: center;
+                }
             }
             .carrito-pagar-button{
+                width: 100%;
                 button{
                     padding: 1rem;
                     width: 100%;
                     border-radius: 50px;
-                    background-color: orange;
-                    color: white;
+                    background-color: $divButtonColor;
+                    color: $white;
                     font-weight: bolder;
                 }
             }
