--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -112,39 +112,42 @@
   color: #fff;
 }
 
-.main-container-carrito {
+.containerMain {
+  background-color: #f5f5f5;
+}
+.containerMain .main-container-carrito {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 1rem;
 }
-.main-container-carrito .container-carrito {
-  border: 1px solid gray;
+.containerMain .main-container-carrito .container-carrito .container-carrito-productos {
+  background-color: #fff;
 }
-.main-container-carrito .container-carrito .container-carrito-productos .carrito-contador {
+.containerMain .main-container-carrito .container-carrito .container-carrito-productos .carrito-contador {
   padding: 1rem;
 }
-.main-container-carrito .container-carrito .container-carrito-productos .carrito-contador span {
+.containerMain .main-container-carrito .container-carrito .container-carrito-productos .carrito-contador span {
   font-weight: bold;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
-.main-container-carrito .container-carrito .container-carrito-productos .carrito-productos {
+.containerMain .main-container-carrito .container-carrito .container-carrito-productos .carrito-productos {
   padding: 1rem;
 }
-.main-container-carrito .container-carrito .container-carrito-productos .carrito-productos .carrito-vacio {
+.containerMain .main-container-carrito .container-carrito .container-carrito-productos .carrito-productos .carrito-vacio {
   padding: 1rem;
 }
-.main-container-carrito .container-carrito .container-carrito-productos .carrito-productos .carrito-vacio p {
+.containerMain .main-container-carrito .container-carrito .container-carrito-productos .carrito-productos .carrito-vacio p {
   text-align: center;
   font-size: 1.5rem;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
 }
-.main-container-carrito .container-carrito .container-carrito-productos .carrito-productos .producto {
+.containerMain .main-container-carrito .container-carrito .container-carrito-productos .carrito-productos .producto {
   display: flex;
   align-items: center;
   padding: 0.5rem;
 }
-.main-container-carrito .container-carrito .container-carrito-productos .carrito-productos .producto .carrito-productos-descripcion {
+.containerMain .main-container-carrito .container-carrito .container-carrito-productos .carrito-productos .producto .carrito-productos-descripcion {
   display: flex;
   flex-direction: column;
   align-items: start;
@@ -152,41 +155,41 @@
   width: 100%;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
-.main-container-carrito .container-carrito .container-carrito-productos .carrito-productos .producto .carrito-productos-descripcion .carrito-envio {
+.containerMain .main-container-carrito .container-carrito .container-carrito-productos .carrito-productos .producto .carrito-productos-descripcion .carrito-envio {
   color: green;
 }
-.main-container-carrito .container-carrito .container-carrito-productos .carrito-productos .producto .carrito-productos-img {
+.containerMain .main-container-carrito .container-carrito .container-carrito-productos .carrito-productos .producto .carrito-productos-img {
   display: flex;
   justify-content: center;
   width: 100%;
 }
-.main-container-carrito .container-carrito .container-carrito-pagar {
+.containerMain .main-container-carrito .container-carrito .container-carrito-pagar {
+  background-color: #ffffff;
   display: flex;
   flex-direction: column;
   align-items: start;
-  border: 1px solid gray;
   gap: 1rem;
   padding: 1rem;
 }
-.main-container-carrito .container-carrito .container-carrito-pagar span {
+.containerMain .main-container-carrito .container-carrito .container-carrito-pagar span {
   font-weight: bold;
   font-size: 1.2rem;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
-.main-container-carrito .container-carrito .container-carrito-pagar .carrito-pagar-total {
+.containerMain .main-container-carrito .container-carrito .container-carrito-pagar .carrito-pagar-total {
   display: flex;
   flex-direction: column;
   align-items: start;
   gap: 0.5rem;
   width: 100%;
 }
-.main-container-carrito .container-carrito .container-carrito-pagar .carrito-pagar-total span {
+.containerMain .main-container-carrito .container-carrito .container-carrito-pagar .carrito-pagar-total span {
   text-align: center;
 }
-.main-container-carrito .container-carrito .container-carrito-pagar .carrito-pagar-button {
+.containerMain .main-container-carrito .container-carrito .container-carrito-pagar .carrito-pagar-button {
   width: 100%;
 }
-.main-container-carrito .container-carrito .container-carrito-pagar .carrito-pagar-button button {
+.containerMain .main-container-carrito .container-carrito .container-carrito-pagar .carrito-pagar-button button {
   padding: 1rem;
   width: 100%;
   border-radius: 50px;
@@ -292,6 +295,48 @@
   }
   .container-productos .container-productos-cards .card-producto .card-producto-body .card-body-span-precio {
     font-size: 1.4rem;
+  }
+  .main-container-carrito .container-carrito {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    gap: 1rem;
+  }
+  .main-container-carrito .container-carrito .container-carrito-productos .carrito-contador span {
+    font-size: 1.8rem;
+  }
+  .main-container-carrito .container-carrito .container-carrito-productos .carrito-productos .producto .carrito-productos-descripcion {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .main-container-carrito .container-carrito .container-carrito-productos .carrito-productos .producto .carrito-productos-img img {
+    width: 100%;
+  }
+  .main-container-carrito .container-carrito .container-carrito-pagar {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    padding: 1rem;
+  }
+  .main-container-carrito .container-carrito .container-carrito-pagar span {
+    font-weight: bold;
+    font-size: 1.2rem;
+    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  }
+  .main-container-carrito .container-carrito .container-carrito-pagar .carrito-pagar-total {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.5rem;
+  }
+  .main-container-carrito .container-carrito .container-carrito-pagar .carrito-pagar-button button {
+    padding: 1rem;
+    width: 100%;
+    background-color: #3b3636;
+    border: 1px solid black;
+    color: #fff;
+    font-weight: bolder;
   }
   .containerFooter {
     display: grid;
@@ -528,6 +573,7 @@
     width: 1000px;
     grid-template-columns: 2fr 1fr;
     grid-template-rows: auto;
+    gap: 1rem;
   }
   .main-container-carrito .container-carrito .container-carrito-productos .carrito-contador span {
     font-size: 1.8rem;
