--- a/assets/scss/_utilities/_variables.scss
+++ b/assets/scss/_utilities/_variables.scss
@@ -12,6 +12,7 @@ $negroTransparente: rgba(0, 0, 0, 0.5);
 $outLineVentas: rgb(172, 169, 169);
 $divButtonColor: #3b3636;
 $buttonColor: #f7cdac;
+$bodycolorCarrito: #f5f5f5;
 /* COLORES */
 
 /* FUENTES */
